Change include paths; favicons.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ pyenv/*
 *.pyc
 
 connectedafrica/static/vendor/*
-connectedafrica/static/gen/*
+connectedafrica/static/style.css
+connectedafrica/static/app.js
 connectedafrica/static/.webassets-cache/*
 
