--- a/data/pa_memberships.csv.yaml
+++ b/data/pa_memberships.csv.yaml
@@ -4,14 +4,14 @@ entities:
     schemata: ['popolo_entity', 'popolo_person', 'details']
     source_url_column: 'source_url'
     columns:
-     - column: 'name'
-       property: 'person_name'
+     - column: 'person_name'
+       property: 'name'
   org:
     schemata: ['popolo_entity', 'popolo_organization']
     source_url_column: 'source_url'
     columns:
-     - column: 'name'
-       property: 'organization_name'
+     - column: 'organization_name'
+       property: 'name'
 relations:
   membership:
     schema: 'popolo_membership'
