--- a/data/pa_committees.csv.yaml
+++ b/data/pa_committees.csv.yaml
@@ -1,4 +1,4 @@
-
+# TODO: Are these committees organizations in their own right?
 entities:
   committee:
     schemata: ['popolo_entity', 'popolo_organization', 'political_committee']
