--- a/data/npo_organisations.csv.yaml
+++ b/data/npo_organisations.csv.yaml
@@ -1,38 +1,38 @@
 
 entities:
   npo:
-    schemata: ['details', 'popolo_organization']
+    schemata: ['NonProfit', 'Organization']
     source_url_column: 'source_url'
     columns:
       - column: 'name'
         property: 'name'
-      #- column: 'status'
+      #- column: 'status'  # TODO
       #  property: 'jse_status'
-      - column: 'category'
-        property: 'org_category'
+      #- column: 'category'  # TODO
+      #  property: 'org_category'
       - column: 'reg_no'
-        property: 'org_identifier'
-      #- column: 'reg_date'
+        property: 'registration_number'
+      #- column: 'reg_date'  # TODO
       #  property: ''
-      #- column: 'legal_form'
+      #- column: 'legal_form'  # TODO
       #  property: 'org_classification'
       - column: 'Website'
-        property: 'website'
+        property: 'contact_url'
         skip_empty: true
       - column: 'email'
-        property: 'email'
+        property: 'contact_email'
         skip_empty: true
       - column: 'phone'
-        property: 'telephone_number'
+        property: 'contact_phone'
         skip_empty: true
       - column: 'fax'
-        property: 'fax_number'
+        property: 'contact_fax'
         skip_empty: true
       - column: 'postal_address'
-        property: 'postal_address'
+        property: 'contact_address_postal'
         skip_empty: true
       - column: 'physical_address'
-        property: 'physical_address'
+        property: 'contact_address_physical'
         skip_empty: true
 
 
