--- a/data/pa_parties.csv.yaml
+++ b/data/pa_parties.csv.yaml
@@ -1,14 +1,14 @@
 
 entities:
   party:
-    schemata: ['popolo_entity', 'popolo_organization', 'political_party']
+    schemata: ['PoliticalParty', 'Organization']
     source_url_column: 'source_url'
     columns:
      - column: 'name'
        property: 'name'
      - column: 'popit_id'
-       property: 'popit_id'
+       property: 'xid_popolo'
      - column: 'pa_url'
-       property: 'pa_url'
+       property: 'xurl_peoples_assembly'
      - column: 'org_category'
-       property: 'org_classification'
+       property: 'classification'
