--- a/data/pa_persons.csv.yaml
+++ b/data/pa_persons.csv.yaml
@@ -1,15 +1,15 @@
 
 entities:
   person:
-    schemata: ['popolo_entity', 'popolo_person', 'details']
+    schemata: ['Person']
     source_url_column: 'source_url'
     columns:
      - column: 'name'
        property: 'name'
      - column: 'popit_id'
-       property: 'popit_id'
+       property: 'xid_popolo'
      - column: 'pa_url'
-       property: 'pa_url'
+       property: 'xurl_peoples_assembly'
      - column: 'given_name'
        property: 'given_name'
        skip_empty: true
@@ -17,10 +17,10 @@ entities:
        property: 'family_name'
        skip_empty: true
      - column: 'telephone_number'
-       property: 'telephone_number'
+       property: 'contact_phone'
        skip_empty: true
      - column: 'email'
-       property: 'email'
+       property: 'contact_email'
        skip_empty: true
      - column: 'summary'
        property: 'summary'
