--- a/data/pa_memberships.csv.yaml
+++ b/data/pa_memberships.csv.yaml
@@ -22,6 +22,7 @@ relations:
      - column: 'role'
        property: 'role'
        skip_empty: true
+       unique: true
      - column: 'start_date'
        property: 'date_start'
        skip_empty: true
