--- a/data/npo_officers.csv.yaml
+++ b/data/npo_officers.csv.yaml
@@ -16,9 +16,10 @@ entities:
 relations:
   relation:
     source_url_column: 'source_url'
-    schema: 'Membership'
+    schema: 'Directorship'
     source: 'officer'
     target: 'npo'
     columns:
       - column: 'role'
         property: 'role'
+        unique: true
