--- a/data/pa_committees.csv.yaml
+++ b/data/pa_committees.csv.yaml
@@ -1,19 +1,17 @@
 # TODO: Are these committees organizations in their own right?
+#   - I'd argue no, - pudo
 entities:
   committee:
-    schemata: ['popolo_entity', 'popolo_organization', 'political_committee']
+    schemata: ['Committee']
     source_url_column: 'source_url'
     columns:
      - column: 'name'
        property: 'name'
      - column: 'popit_id'
-       property: 'popit_id'
+       property: 'xid_popolo'
      - column: 'pa_url'
-       property: 'pa_url'
+       property: 'xurl_peoples_assembly'
      - column: 'org_classification'
-       property: 'org_classification'
-       skip_empty: true
-     - column: 'org_category'
-       property: 'org_category'
+       property: 'tagline'
        skip_empty: true
 
