--- a/data/pa_directorships.csv.yaml
+++ b/data/pa_directorships.csv.yaml
@@ -13,7 +13,7 @@ entities:
      - column: 'company_name'
        property: 'name'
 relations:
-  membership:  # TODO: review this relation
+  membership:
     schema: 'Membership'
     source_url_column: 'source_url'
     source: 'person'
@@ -21,5 +21,6 @@ relations:
     columns:
      - column: 'role'
        property: 'role'
-       default: 'director'
-       source_url_column: 'report'
+       unique: true
+       default: 'Director'
+       #source_url_column: 'report'
