--- a/conf/supervisor.template
+++ b/conf/supervisor.template
@@ -1,7 +1,7 @@
 [program:connectedafrica.gunicorn]
 num_procs=1
 process_name=%(process-name)s
-environment=GRANO_HOST="http://localhost:9000",GRANO_PROJECT="connectedafrica-sa",COAF_SETTINGS='settings'
+environment=GRANO_HOST="http://backend.connectedafrica.org",GRANO_PROJECT="connectedafrica-sa",COAF_SETTINGS='settings'
 directory=%(project-dir)s
 command=%(ve-dir)s/bin/python %(ve-dir)s/bin/gunicorn -b %(host)s:%(port)s connectedafrica.views:app -w 4
 user=%(user)s
