--- a/data/directorships.csv.yaml
+++ b/data/directorships.csv.yaml
@@ -6,6 +6,9 @@ entities:
     columns:
      - column: 'Person Name'
        property: 'name'
+     - column: 'ID number'
+       property: 'national_id'
+       skip_empty: true
   org:
     schemata: ['Organization']
     source_url_column: 'Source URL for information'
@@ -17,8 +20,10 @@ entities:
        skip_empty: true
      - column: 'Address'
        property: 'contact_address_physical'
+       skip_empty: true
      - column: 'Registration number'
        property: 'registration_number'
+       skip_empty: true
 relations:
   membership:
     schema: 'Membership'
