--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@ pyenv/*
 *.pyc
 
 connectedafrica/static/vendor/*
-connectedafrica/static/style.css
-connectedafrica/static/app.js
+connectedafrica/static/gen/*
 connectedafrica/static/.webassets-cache/*
 
 data/.cache/*
