--- a/data/pa_financial.csv.yaml
+++ b/data/pa_financial.csv.yaml
@@ -1,12 +1,12 @@
 entities:
   person:
-    schemata: ['Person']
+    schema: 'Person'
     source_url_column: 'source_url'
     columns:
      - column: 'person_name'
        property: 'name'
   company:
-    schemata: ['Organization']
+    schema: 'Organization'
     source_url_column: 'source_url'
     columns:
      - column: 'company_name'
