--- a/data/pa_parties.csv.yaml
+++ b/data/pa_parties.csv.yaml
@@ -1,7 +1,7 @@
 
 entities:
   party:
-    schemata: ['PoliticalParty', 'Organization']
+    schema: 'PoliticalParty'
     source_url_column: 'source_url'
     columns:
      - column: 'name'
