--- a/data/jse_entities.csv.yaml
+++ b/data/jse_entities.csv.yaml
@@ -1,7 +1,7 @@
 
 entities:
   company:
-    schemata: ['PublicCompany', 'Organization']
+    schema: 'Company'
     source_url_column: 'source_url'
     columns:
       - column: 'LongName'
