--- a/data/pa_persons.csv.yaml
+++ b/data/pa_persons.csv.yaml
@@ -1,7 +1,7 @@
 
 entities:
   person:
-    schemata: ['Person']
+    schema: 'Person'
     source_url_column: 'source_url'
     columns:
      - column: 'name'
