--- a/data/windeeds_companies.csv.yaml
+++ b/data/windeeds_companies.csv.yaml
@@ -1,7 +1,7 @@
 
 entities:
   person:
-    schemata: ['Person']
+    schema: 'Person'
     source_url_column: 'url'
     columns:
      - column: 'director_name'
@@ -24,7 +24,7 @@ entities:
        format: '%m/%d/%Y'
        skip_empty: true
   org:
-    schemata: ['Organization']
+    schema: 'Company'
     source_url_column: 'url'
     columns:
      - column: 'CIPC-Company Enterprise name'
