--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "d3": "~3.4.13",
+    "webcola": "~3.0.1"
   }
 }
