update PA mapping, move PA and JSE to subfolders

--- a/data/pa/pa_directorships.csv.yaml
+++ b/data/pa/pa_directorships.csv.yaml
@@ -14,13 +14,8 @@ entities:
        property: 'name'
 relations:
   membership:
-    schema: 'Membership'
+    schema: 'Directorship'
     source_url_column: 'source_url'
     source: 'person'
     target: 'company'
-    columns:
-     - column: 'role'
-       property: 'role'
-       unique: true
-       default: 'Director'
-       #source_url_column: 'report'
+    columns: []
