update NPO mapping, move to subfolder

--- a/data/npo/npo_officers.csv.yaml
+++ b/data/npo/npo_officers.csv.yaml
@@ -18,10 +18,7 @@ entities:
 relations:
   relation:
     source_url_column: 'source_url'
-    schema: 'Membership'
+    schema: 'Directorship'
     source: 'officer'
     target: 'npo'
-    columns:
-      - column: 'role'
-        property: 'role'
-        unique: true
+    columns: []
