--- a/data/npo/npo_organisations.csv.yaml
+++ b/data/npo/npo_organisations.csv.yaml
@@ -15,6 +15,8 @@ entities:
       - column: 'reg_date'
         property: 'date_founding'
         type: 'datetime'
+        format:
+          day: '%d/%m/%Y'
       - column: 'legal_form'
         property: 'legal_form'
       - column: 'Website'
