--- a/data/windeeds/windeeds_members_to_companies.csv.yaml
+++ b/data/windeeds/windeeds_members_to_companies.csv.yaml
@@ -18,7 +18,8 @@ entities:
      - column: 'CIPC Date of birth'
        property: 'date_birth'
        type: datetime
-       format: '%m/%d/%Y'
+       format:
+         day: '%Y/%m/%d'
        skip_empty: true
   org:
     schema: 'Company'
@@ -52,11 +53,13 @@ relations:
      - column: 'CIPC Appointment date'
        property: 'date_start'
        type: datetime
-       format: '%m/%d/%Y'
+       format:
+         day: '%Y/%m/%d'
        skip_empty: true
      - column: 'CIPC Resignation date'
        property: 'date_end'
        type: datetime
-       format: '%m/%d/%Y'
+       format:
+         day: '%Y/%m/%d'
        skip_empty: true
 
