fix Who's Who date mapping, move to subfolder, add notes

--- a/data/whoswho/whoswho_memberships.csv.yaml
+++ b/data/whoswho/whoswho_memberships.csv.yaml
@@ -7,32 +7,34 @@ entities:
      - column: 'person_name'
        property: 'name'
   org:
-    schema: 'EducationalInstitution'
+    schema: 'Organization'
     source_url_column: 'source_url'
     columns:
      - column: 'organization_name'
        property: 'name'
+     - column: 'organization_url'
+       property: 'xurl_whos_who'
        skip_empty: true
 relations:
   membership:
-    schema: 'Education'
+    schema: 'Membership'
     source_url_column: 'source_url'
     source: 'person'
     target: 'org'
     columns:
-     - column: 'qualification'
-       property: 'qualification_name'
+     - column: 'role_name'
+       property: 'role'
        skip_empty: true
        unique: true
-     - column: 'level'
-       property: 'level'
+     - column: 'role_start_year'
+       property: 'date_start'
+       type: datetime
+       format:
+         year: '%Y'
        skip_empty: true
-     - column: 'start_year'
-       property: 'year_start'
-       type: int
+     - column: 'role_end_year'
+       property: 'date_end'
+       type: datetime
+       format:
+         year: '%Y'
        skip_empty: true
-     - column: 'year_awarded'
-       property: 'year_end'
-       type: int
-       skip_empty: true
-       unique: true
