--- a/data/pa/pa_directorships.csv.yaml
+++ b/data/pa/pa_directorships.csv.yaml
@@ -18,4 +18,7 @@ relations:
     source_url_column: 'source_url'
     source: 'person'
     target: 'company'
-    columns: []
+    columns:
+     - column: 'report'
+       property: 'status'
+       skip_empty: true
